[package]
name = "testo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["macros", "net", "io-util", "time", "rt-multi-thread", "sync"]}
tokio-util = "0.6.7"
futures = "0.3"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
color-eyre = "^0"
env_logger = "^0"
log = "^0"
clap = "3.0.0-beta.2"
